--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/packages.config
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/packages.config
@@ -12,7 +12,8 @@
   <package id="Serilog.Sinks.PeriodicBatching" version="2.1.1" targetFramework="net47" />
   <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net47" />
   <package id="Serilog.Sinks.Seq" version="4.0.0" targetFramework="net47" />
-  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net47" />
-  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net47" />
-  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net47" />
+  <package id="System.Reactive" version="4.0.0" targetFramework="net47" />
+  <package id="System.Reactive.Core" version="4.0.0" targetFramework="net47" />
+  <package id="System.Reactive.Interfaces" version="4.0.0" targetFramework="net47" />
+  <package id="System.Reactive.Linq" version="4.0.0" targetFramework="net47" />
 </packages>
