--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation.UnitTests/packages.config
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation.UnitTests/packages.config
@@ -1,24 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoFixture" version="4.4.0" targetFramework="net47" />
-  <package id="AutoFixture.AutoMoq" version="4.4.0" targetFramework="net47" />
+  <package id="AutoFixture" version="4.5.0" targetFramework="net47" />
+  <package id="AutoFixture.AutoMoq" version="4.5.0" targetFramework="net47" />
   <package id="Castle.Core" version="4.3.1" targetFramework="net47" />
   <package id="Fare" version="2.1.1" targetFramework="net47" />
-  <package id="Moq" version="4.8.3" targetFramework="net47" />
+  <package id="Moq" version="4.10.0" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
   <package id="Rogero.AutoFixture.Helpers" version="1.0.8" targetFramework="net47" />
-  <package id="Rogero.Option" version="1.0.44" targetFramework="net47" />
+  <package id="Rogero.Option" version="1.0.46" targetFramework="net47" />
   <package id="Serilog" version="2.7.1" targetFramework="net47" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net47" />
-  <package id="Shouldly" version="3.0.0" targetFramework="net47" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net47" />
+  <package id="Shouldly" version="3.0.2" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net47" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net47" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net47" />
-  <package id="xunit" version="2.3.1" targetFramework="net47" />
-  <package id="xunit.abstractions" version="2.0.1" targetFramework="net47" />
-  <package id="xunit.analyzers" version="0.9.0" targetFramework="net47" />
-  <package id="xunit.assert" version="2.3.1" targetFramework="net47" />
-  <package id="xunit.core" version="2.3.1" targetFramework="net47" />
-  <package id="xunit.extensibility.core" version="2.3.1" targetFramework="net47" />
-  <package id="xunit.extensibility.execution" version="2.3.1" targetFramework="net47" />
-  <package id="Xunit.StaFact" version="0.2.17" targetFramework="net47" />
+  <package id="xunit" version="2.4.1" targetFramework="net47" />
+  <package id="xunit.abstractions" version="2.0.3" targetFramework="net47" />
+  <package id="xunit.analyzers" version="0.10.0" targetFramework="net47" />
+  <package id="xunit.assert" version="2.4.1" targetFramework="net47" />
+  <package id="xunit.core" version="2.4.1" targetFramework="net47" />
+  <package id="xunit.extensibility.core" version="2.4.1" targetFramework="net47" />
+  <package id="xunit.extensibility.execution" version="2.4.1" targetFramework="net47" />
+  <package id="Xunit.StaFact" version="0.3.5" targetFramework="net47" />
 </packages>
