--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/packages.config
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation.WpfTestApp/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Rogero.Option" version="1.0.44" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
+  <package id="Rogero.Option" version="1.0.46" targetFramework="net47" />
   <package id="Rogero.ReactiveProperty" version="1.0.17" targetFramework="net47" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net47" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net47" />
@@ -12,8 +13,11 @@
   <package id="Serilog.Sinks.PeriodicBatching" version="2.1.1" targetFramework="net47" />
   <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net47" />
   <package id="Serilog.Sinks.Seq" version="4.0.0" targetFramework="net47" />
-  <package id="System.Reactive" version="4.0.0" targetFramework="net47" />
-  <package id="System.Reactive.Core" version="4.0.0" targetFramework="net47" />
-  <package id="System.Reactive.Interfaces" version="4.0.0" targetFramework="net47" />
-  <package id="System.Reactive.Linq" version="4.0.0" targetFramework="net47" />
+  <package id="System.Reactive" version="4.1.2" targetFramework="net47" />
+  <package id="System.Reactive.Core" version="4.1.2" targetFramework="net47" />
+  <package id="System.Reactive.Interfaces" version="4.1.2" targetFramework="net47" />
+  <package id="System.Reactive.Linq" version="4.1.2" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net47" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net47" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net47" />
 </packages>
