--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation/packages.config
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Rogero.Option" version="1.0.44" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net47" />
+  <package id="Rogero.Option" version="1.0.46" targetFramework="net47" />
   <package id="Serilog" version="2.7.1" targetFramework="net47" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net47" />
 </packages>
