--- a/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
+++ b/src/Rogero.WpfNavigation/Rogero.WpfNavigation/Rogero.WpfNavigation.csproj
@@ -66,6 +66,7 @@
     <Compile Include="IRouteAuthorizationResult.cs" />
     <Compile Include="IViewAware.cs" />
     <Compile Include="RouteRequest.cs" />
+    <Compile Include="RouteWorkflow.cs" />
     <Compile Include="RouteWorkflowTask.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="IRouteEntryRegistry.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="EnumerableTrees\VisualTreeAdapter.cs" />
     <Compile Include="ViewportAdapters\WindowExtensions.cs" />
     <Compile Include="ViewportNames.cs" />
+    <Compile Include="ViewportOptions.cs" />
     <Compile Include="ViewportType.cs" />
   </ItemGroup>
   <ItemGroup>
